tests/error/error03.correct
attempt to access field 'x' in value of type 'function'
